Feat: html structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <main>
-        <h1>Challenge</h1>
+        <header>logo</header>
+        <section>
+            <div class="text-input-container">Digite seu texto aqui</div>
+            <div class="buttons-container">
+                <span>! Apenas letras minúsculas e sem acento.</span>
+                <div class="buttons-content">
+                    <button>Criptografar</button>
+                    <button>Descriptografar</button>
+                </div>
+            </div>
+        </section>
+        <aside>
+            <div class="text-output-container">
+                <div class="image-aside"></div>
+            </div>
+            <div class="buttons-content">
+                <button>Copiar</button>
+            </div>
+        </aside>
     </main>
     <footer></footer>
 </body>
