Feat: created textarea

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 </head>
 <body>
     <main>
-        <header>logo</header>
         <section>
-            <div class="text-input-container">Digite seu texto aqui</div>
-            <div class="buttons-container">
-                <span>! Apenas letras minúsculas e sem acento.</span>
-                <div class="buttons-content">
-                    <button>Criptografar</button>
-                    <button>Descriptografar</button>
+            <header>
+                <img src="./public/assets/logo.png" alt="logo da alura">
+            </header>
+            <div class="text-input-container">
+                <textarea placeholder="Digite seu texto aqui"></textarea>
+                <div class="buttons-container">
+                    <span>! Apenas letras minúsculas e sem acento.</span>
+                    <div class="buttons-content">
+                        <button>Criptografar</button>
+                        <button>Descriptografar</button>
+                    </div>
                 </div>
             </div>
         </section>
         <aside>
             <div class="text-output-container">
-                <div class="image-aside"></div>
+                <div class="image-aside">
+                    <img src="./public/assets/girl.png" alt="desenho de uma garota sentada com uma lupa de aumento olhando um diamante">
+                </div>
             </div>
             <div class="buttons-content">
                 <button>Copiar</button>
