Feat: button style created

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <main>
         <section>
             <header>
-                <img src="./public/assets/logo.png" alt="logo da alura">
+                <img src="./public/assets/logo.svg" alt="logo da alura">
+                <p>Alura Challenge</p>
             </header>
             <div class="text-input-container">
                 <textarea placeholder="Digite seu texto aqui"></textarea>
                 <div class="buttons-container">
                     <span>! Apenas letras minúsculas e sem acento.</span>
                     <div class="buttons-content">
-                        <button>Criptografar</button>
-                        <button>Descriptografar</button>
+                        <button class="btn-primary">Criptografar</button>
+                        <button class="btn-secondary">Descriptografar</button>
                     </div>
                 </div>
             </div>
@@ -27,11 +28,11 @@
         <aside>
             <div class="text-output-container">
                 <div class="image-aside">
-                    <img src="./public/assets/girl.png" alt="desenho de uma garota sentada com uma lupa de aumento olhando um diamante">
+                    <img src="./public/assets/girl.svg" alt="desenho de uma garota sentada com uma lupa de aumento olhando um diamante">
                 </div>
             </div>
             <div class="buttons-content">
-                <button>Copiar</button>
+                <button class="btn-secondary">Copiar</button>
             </div>
         </aside>
     </main>
