Feat: aside created

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                 <p>Alura Challenge</p>
             </header>
             <div class="text-input-container">
-                <textarea placeholder="Digite seu texto aqui"></textarea>
+                <div class="text-input-content">
+                    <textarea placeholder="Digite seu texto aqui"></textarea>
+                </div>
                 <div class="buttons-container">
                     <span>! Apenas letras minúsculas e sem acento.</span>
                     <div class="buttons-content">
@@ -29,11 +31,14 @@
             <div class="text-output-container">
                 <div class="image-aside">
                     <img src="./public/assets/girl.svg" alt="desenho de uma garota sentada com uma lupa de aumento olhando um diamante">
+                    <h2>Nenhuma mensagem encontrada</h2>
+                    <p>Digite um texto que você deseja criptografar ou descriptografar.</p>
+                </div>
+                <div class="text-output-content">
+                    <textarea placeholder="Digite seu texto aqui"></textarea>
                 </div>
             </div>
-            <div class="buttons-content">
-                <button class="btn-secondary">Copiar</button>
-            </div>
+            <button class="btn-secondary">Copiar</button>  
         </aside>
     </main>
     <footer></footer>
