Feat: add alert

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                     <textarea placeholder="Digite seu texto aqui"></textarea>
                 </div>
                 <div class="buttons-container">
-                    <span>! Apenas letras minúsculas e sem acento.</span>
+                    <div class="alert">
+                        <div class="alert-icon">!</div>
+                        Apenas letras minúsculas e sem acento.
+                    </div>
                     <div class="buttons-content">
                         <button class="btn-primary">Criptografar</button>
                         <button class="btn-secondary">Descriptografar</button>
