Fix: button container

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <section>
             <header>
                 <img src="./public/assets/logo.svg" alt="logo da alura">
-                <p>Alura Challenge</p>
             </header>
             <div class="text-input-container">
                 <div class="text-input-content">
-                    <textarea placeholder="Digite seu texto aqui"></textarea>
+                    <textarea placeholder="Digite seu texto"></textarea>
                 </div>
                 <div class="buttons-container">
                     <div class="alert">
