--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./public/assets/logo.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <title>Decodificador de texto</title>
@@ -43,6 +44,5 @@
             <button class="btn-secondary">Copiar</button>  
         </aside>
     </main>
-    <footer></footer>
 </body>
 </html>
